--- a/public/index.html
+++ b/public/index.html
@@ -6,29 +6,37 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
     <!-- endbower -->
+
+    <!-- inject:css -->
+    <link rel="stylesheet" href="stylesheets/categoria.css">
+    <!-- endinject -->
 </head>
 
 <body>
-    <h1>Fábio</h1>
-
-    <div ng-controller="IndexController">
-        <input type="button" ng-click="teste()" value="Teste"/>
-    </div>
-
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="bower_components/angular-ui-sortable/sortable.js"></script>
     <!-- endbower -->
 
     <!-- inject:js -->
     <script src="app.js"></script>
     <script src="index.js"></script>
-    <script src="teste.js"></script>
+    <script src="javascripts/categoria.js"></script>
     <!-- endinject -->
 
-    <div ng-view></div>
+    <div class="container-fluid">
+
+        <h1>Index.html</h1>
+        <div ng-controller="IndexController">
+            <input type="button" ng-click="pathCategoria()" value="Categorias"/>
+        </div>
+        <br>
+        <div ng-view></div>
+    </div>
 
 </body>
 </html>
