--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
 
     <!-- inject:css -->
@@ -15,11 +15,9 @@
 <body>
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
-    <script src="bower_components/angular-ui-sortable/sortable.js"></script>
     <!-- endbower -->
 
     <!-- inject:js -->
@@ -28,7 +26,7 @@
     <script src="javascripts/categoria.js"></script>
     <!-- endinject -->
 
-    <div class="container-fluid">
+    <div class="container">
 
         <h1>Index.html</h1>
         <div ng-controller="IndexController">
