--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
     <!-- inject:css -->
     <link rel="stylesheet" href="stylesheets/category.css">
+    <link rel="stylesheet" href="stylesheets/login.css">
     <!-- endinject -->
 
 </head>
