--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
 
     <!-- inject:css -->
     <link rel="stylesheet" href="stylesheets/category.css">
+    <link rel="stylesheet" href="stylesheets/index.css">
     <link rel="stylesheet" href="stylesheets/login.css">
     <!-- endinject -->
 
 </head>
 
-<body>
+<body class="contas-bg">
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
