Fix style in login page and body

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="contas-bg">
+<body ng-class="{'contas-bg': login}">
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -31,6 +31,7 @@
     <script src="app.js"></script>
     <script src="index.js"></script>
     <script src="javascripts/controllers/category.js"></script>
+    <script src="javascripts/controllers/login.js"></script>
     <script src="javascripts/directives/focusme.js"></script>
     <script src="javascripts/factorys/category.js"></script>
     <!-- endinject -->
