--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <!-- endbower -->
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="stylesheets/category.css">
-    <link rel="stylesheet" href="stylesheets/index.css">
-    <link rel="stylesheet" href="stylesheets/login.css">
+    <link rel="stylesheet" href="category/category.css">
+    <link rel="stylesheet" href="index/index.css">
+    <link rel="stylesheet" href="login/login.css">
     <!-- endinject -->
 
 </head>
@@ -29,11 +29,12 @@
 
     <!-- inject:js -->
     <script src="app.js"></script>
-    <script src="index.js"></script>
-    <script src="javascripts/controllers/category.js"></script>
-    <script src="javascripts/controllers/login.js"></script>
-    <script src="javascripts/directives/focusme.js"></script>
-    <script src="javascripts/factorys/category.js"></script>
+    <script src="category/category.controller.js"></script>
+    <script src="category/category.factory.js"></script>
+    <script src="category/category.modal.controller.js"></script>
+    <script src="directives/focusme.directive.js"></script>
+    <script src="index/index.controller.js"></script>
+    <script src="login/login.controller.js"></script>
     <!-- endinject -->
 
     <div class="container">
