Configure task test for debug

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 
     <!-- inject:css -->
     <link rel="stylesheet" href="category/category.css">
-    <link rel="stylesheet" href="login/login.css">
     <link rel="stylesheet" href="index/index.css">
+    <link rel="stylesheet" href="login/login.css">
     <!-- endinject -->
 
 </head>
@@ -29,12 +29,12 @@
 
     <!-- inject:js -->
     <script src="app.js"></script>
-    <script src="category/category.controller.js"></script>
-    <script src="category/category.factory.js"></script>
-    <script src="category/category.modal.controller.js"></script>
-    <script src="directives/focusme.directive.js"></script>
-    <script src="login/login.controller.js"></script>
-    <script src="index/index.controller.js"></script>
+    <script src="category/categoryController.js"></script>
+    <script src="category/categoryFactory.js"></script>
+    <script src="category/categoryModalController.js"></script>
+    <script src="directives/focusMeDirective.js"></script>
+    <script src="index/indexController.js"></script>
+    <script src="login/loginController.js"></script>
     <!-- endinject -->
 
     <div class="container">
