--- a/public/login/login.html
+++ b/public/login/login.html
@@ -7,7 +7,7 @@
     <div class="col-md-4"></div>
     <div class="col-md-4">
         <h1 class="text-center"><strong>Contente :-)</strong></h1>
-        <h5 class="text-center no-margin-top">Bem vindo!</h5>
+        <h5 class="text-center no-margin-top">{{welcome}}</h5>
     </div>
     <div class="col-md-4"></div>
 </div>
@@ -18,13 +18,13 @@
     <div class="col-md-2">
         <form class="form-horizontal">
             <div class="form-group">
-                <input type="Email" class="form-control"  placeholder="Digite seu email">
+                <input type="Email" class="form-control"  placeholder="Digite seu email" ng-model="user.email">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control"  placeholder="Digite sua senha">
+                <input type="password" class="form-control"  placeholder="Digite sua senha" ng-model="user.password">
             </div>
             <div class="text-center">
-                <button type="submit" class="btn btn-success">Enviar</button>
+                <button type="submit" class="btn btn-success" ng-click="signIn()">Enviar</button>
             </div>
 
         </form>
