User routes api

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,11 @@
     <script src="category/categoryController.js"></script>
     <script src="category/categoryFactory.js"></script>
     <script src="category/categoryModalController.js"></script>
-    <script src="directives/focusMeDirective.js"></script>
+    <script src="components/apiFactory.js"></script>
     <script src="index/indexController.js"></script>
     <script src="login/loginController.js"></script>
+    <script src="login/loginService.js"></script>
+    <script src="components/directives/focusMeDirective.js"></script>
     <!-- endinject -->
 
     <div class="container">
