--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <script src="category/categoryController.js"></script>
     <script src="category/categoryModalController.js"></script>
     <script src="category/categoryService.js"></script>
-    <script src="components/apiFactory.js"></script>
+    <script src="components/restClient.js"></script>
     <script src="index/indexController.js"></script>
     <script src="login/loginController.js"></script>
     <script src="login/loginService.js"></script>
